# main.py
@@ -11,6 +11,7 @@ from Src.Core.format_reporting import format_reporting
 from Src.Core.custom_exceptions import custom_exceptions
 from Src.Core.comparison_format import comparison_format
 
+from Src.models.Warehouse.warehouse_model import warehouse_model
 from Src.Reports.report_factory import report_factory
 from Src.logic.nomenclature_prototype import nomenclature_prototype
 
@@ -24,6 +25,38 @@ receipt = receipt_book_menager()
 start = start_service()
 
 start.create(".")
+
+
+@app.route("/app/get_transactions", methods=["POST"])
+def get_transactions():
+    req = request.json
+    custom_exceptions.type(req, dict)
+    req = request.json
+    custom_exceptions.type(req, dict)
+    if "items" not in list(req.keys()):
+        custom_exceptions.other_exception("Были получены некоректные данные!")
+    if len(req["items"]) == 0:
+        custom_exceptions.other_exception("Полученные данные пусты!")
+    req = req["items"][0]
+    custom_exceptions.elements_not_in_array(["nomenclature", "warehouse"], list(req.keys()))
+    for i in list(req.keys()):
+        custom_exceptions.elements_not_in_array(["comparison_format", "value"], list(req[i].keys()))
+
+    data = reposity.data[data_reposity.transaction_key()]
+    filter = filter_model()
+    for i in list(req.keys()):
+        if i != "" and i != None:
+            if i == "nomenclature":
+                req[i]["value"] = reposity.data[data_reposity.nomenclature_key()][req[i]["value"]]
+            elif i == "warehouse":
+                wh = warehouse_model(req[i]["value"])
+                for l in reposity.data[data_reposity.warehouse_key()]:
+                    if l == wh:
+                        req[i]["value"] = l
+        filter.update_filter(i, comparison_format(req[i]["comparison_format"]), req[i]["value"])
+    prototype = nomenclature_prototype(data)
+    result = prototype.create(data, filter)
+    return f"{result.data}"
 
 
 @app.route("/api/reports/comparison_formats", methods=['GET'])
@@ -40,21 +73,19 @@ def model_names():
 def filter_with_filter(entity: str):
     custom_exceptions.type(entity, str)
     if entity not in data_reposity.keys():
-        raise custom_exceptions.other_exception("Некорректно указан тип данных! См метод /api/report/entities")
+        custom_exceptions.other_exception("Некорректно указан тип данных! См метод /api/report/entities")
 
     req = request.json
     custom_exceptions.type(req, dict)
-    for i in ["field", "comparison_format", "value"]:
-        if i not in list(req.keys()):
-            raise custom_exceptions.other_exception("Некорректно указан формат отчета! См метод /api/report/formats")
+    if "items" not in list(req.keys()):
+        custom_exceptions.other_exception("Были получены некоректные данные!")
+    if len(req["items"]) == 0:
+        custom_exceptions.other_exception("Полученные данные пусты!")
+    req = req["items"][0]
+    custom_exceptions.elements_not_in_array(["field", "comparison_format", "value"], list(req.keys()))
 
     filter = filter_model()
-    if req['field'] == "name":
-        filter.name = req['value']
-        filter.formats.name = comparison_format(req["comparison_format"])
-    if req['field'] == "id":
-        filter.id = req['value']
-        filter.formats.id = comparison_format(req["comparison_format"])
+    filter.update_filter(req['field'], comparison_format(req["comparison_format"]), req["value"])
 
     data = reposity.data[entity]
     if type(data) == dict:
